--- a/package.json
+++ b/package.json
@@ -34,5 +34,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.3",
+    "babel-preset-env": "^1.7.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "author": "",
+  "license": "ISC"
 }
