--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "embla-carousel-autoplay": "^8.0.0-rc17",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-social-icons": "^6.7.0",
     "typescript": "^4.4.2",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
