--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-social-icons": "^6.7.0",
