--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react-dom": "^18.2.18",
     "embla-carousel-autoplay": "^8.0.0-rc17",
     "framer-motion": "^10.16.16",
+    "i18next": "^23.7.16",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
