--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^23.7.16",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-cookie-consent": "^9.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
